# ai-logistics-analytics

./: .gitignore  OVERVIEW.md  README.md  docker-compose.yml
scripts/: run-all.sh
server/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
server/app/: config.py  db.py  main.py  models.py  ratelimit.py  schemas.py
server/app/routers/: chat.py  dashboard.py  forecast.py
server/app/scenarios/: registry.py  runner.py
server/app/services/: ai_orchestrator.py  forecasting.py
server/app/tools/: forecast_tool.py  orders_tool.py  plot_tool.py  query_tool.py  scenario_tool.py
server/app/utils/: chart_selector.py  chat_log.py  explainability.py  input_guard.py
server/data/: explorer.py  seed.py
server/migrations/: env.py
server/migrations/versions/: 305fdded3737_create_orders_table.py
web/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/explore/: page.tsx
web/src/app/forecast/: page.tsx
web/src/components/charts/: chart-renderer.tsx  dynamic-chart.tsx
web/src/components/chat/: chat-message.tsx  conversation-badge.tsx  explanation-panel.tsx  history-dialog.tsx  key-gate.tsx
web/src/components/dashboard/: chart-panel.tsx  explorer.tsx  kpi-card.tsx  kpi-grid.tsx
web/src/components/forecast/: forecast-chart.tsx  forecast-view.tsx
web/src/components/layout/: nav.tsx
web/src/components/ui/: dialog.tsx  sidebar.tsx
web/src/hooks/: use-chat.ts
web/src/lib/: api.ts  types.ts
(+2 files in other folders)
