[project]
name = "ai-logistics-analytics-server"
version = "0.1.0"
description = "AI-powered logistics analytics dashboard — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pandas>=2.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "openai>=2.47.0",
    "fastmcp>=3.4.4",
    "langchain>=1.3.14",
    "langchain-openrouter>=0.2.7",
    "slowapi>=0.1.10",
]

[tool.uv]
package = false
